musica (2.10) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 24 Nov 2010 12:29:10 -0600

musica (2.9-0ubuntu1) natty; urgency=low

  * index.php: support album art images in the directory with music; supports
    anything we can detect as an image;  if there's more than one, rotate through
    them in a slideshow; LP: #681031
  * support more than one level in the music tree, LP: #293822, LP: #640821

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 24 Nov 2010 12:29:04 -0600

musica (2.8-0ubuntu1) natty; urgency=low

  * index.php: constrain the size of the album art (some are too big)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 01 Oct 2010 11:28:29 -0700

musica (2.7-0ubuntu1) maverick; urgency=low

  * jplayer.php, jplayer/js/jquery.min.js: embed local copy of this,
    for offline use
  * debian/control, debian/dirs, debian/postinst, index.php: display
    album art embedded in id3v2 tags; currently shelling out to use
    eyeD3 utility; when php's libraries catch up, this should be deprecated
  * jplayer.php: don't autoplay, per pgraner/jfo request
  * index.php, jplayer.php: add a "pop-out" functionality, for popping the
    music player out to a new window/tab; try to get player more centered
  * debian/install, index.php, popout.png: add popout icon

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 25 Sep 2010 11:23:44 -0700

musica (2.6-0ubuntu1) maverick; urgency=low

  * index.php: support nested album directories, LP: #640821

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 16 Sep 2010 14:11:19 -0700

musica (2.5-0ubuntu1) maverick; urgency=low

  * debian/install, favicon.ico, index.php: add a favicon.ico, LP: #622289
  * favicon.ico: stylize the musical note to look like an "M"

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 24 Aug 2010 15:11:07 -0400

musica (2.4-0ubuntu1) maverick; urgency=low

  * index.php: fix problem where songs or albums have two '.' in their
    name
